--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css"></link>
 </head>
 <body>
-    
+
+    <section class = "main">
+        <h1>ChatUZ</h1>
+        <p id="output"></p>
+            <div class="input-conteiner">
+                <input type="text"  placeholder="Zapytaj ChatUZ" name="">
+            </div>
+    </section>
 </body>
 </html>
